// Vitest Snapshot v1

exports[`Drawer > Drawer baseVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--right"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-drawer"
      >
        <!---->
        <!---->
        <div
          class="t-drawer__sidebar"
        >
          
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单一
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单二
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单三
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单四
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单五
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单六
            </div>
          </div>
          
        </div>
        <!---->
      </div>
      
    </div>
  </teleport-stub>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      基础抽屉
      
    </span>
    <!---->
  </button>
  
</div>
`;

exports[`Drawer > Drawer footerVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--left"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-drawer"
      >
        <!---->
        <!---->
        <div
          class="t-drawer__sidebar"
        >
          
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单一
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单二
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单三
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单四
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单五
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单六
            </div>
          </div>
          
        </div>
        <div
          class="t-drawer__footer"
        >
          
          <div
            class="button-host"
          >
            <button
              aria-disabled="false"
              class="t-button t-button--size-large t-button--outline t-button--default t-button--rectangle t-button--block"
              role="button"
              type="button"
            >
              <!---->
              <span
                class="t-button__content"
              >
                
                操作
                
              </span>
              <!---->
            </button>
          </div>
          
        </div>
      </div>
      
    </div>
  </teleport-stub>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      带底部插槽抽屉
      
    </span>
    <!---->
  </button>
  
</div>
`;

exports[`Drawer > Drawer iconVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <teleport-stub
    data-v-6846568d=""
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--right"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-drawer"
      >
        <!---->
        <!---->
        <div
          class="t-drawer__sidebar"
        >
          
          <div
            class="t-drawer__sidebar-item"
          >
            <span
              class="t-drawer__sidebar-item-icon"
            >
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单一
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <span
              class="t-drawer__sidebar-item-icon"
            >
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单二
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <span
              class="t-drawer__sidebar-item-icon"
            >
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单三
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <span
              class="t-drawer__sidebar-item-icon"
            >
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单四
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <span
              class="t-drawer__sidebar-item-icon"
            >
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单五
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <span
              class="t-drawer__sidebar-item-icon"
            >
              <svg
                class="t-icon t-icon-app"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单六
            </div>
          </div>
          
        </div>
        <!---->
      </div>
      
    </div>
  </teleport-stub>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    data-v-6846568d=""
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      带图标抽屉
      
    </span>
    <!---->
  </button>
  
</div>
`;

exports[`Drawer > Drawer mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-4e345f36=""
>
  <h1
    class="title"
    data-v-4e345f36=""
  >
    Drawer 抽屉
  </h1>
  <p
    class="summary"
    data-v-4e345f36=""
  >
    用作一组平行关系页面/内容的切换器，相较于Tab，同屏可展示更多的选项数量。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-4e345f36=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础抽屉
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--right"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-drawer"
          >
            <!---->
            <!---->
            <div
              class="t-drawer__sidebar"
            >
              
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单一
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单二
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单三
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单四
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单五
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单六
                </div>
              </div>
              
            </div>
            <!---->
          </div>
          
        </div>
      </teleport-stub>
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          基础抽屉
          
        </span>
        <!---->
      </button>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-4e345f36=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标抽屉
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <teleport-stub
        data-v-6846568d=""
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--right"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-drawer"
          >
            <!---->
            <!---->
            <div
              class="t-drawer__sidebar"
            >
              
              <div
                class="t-drawer__sidebar-item"
              >
                <span
                  class="t-drawer__sidebar-item-icon"
                >
                  <svg
                    class="t-icon t-icon-app"
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单一
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <span
                  class="t-drawer__sidebar-item-icon"
                >
                  <svg
                    class="t-icon t-icon-app"
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单二
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <span
                  class="t-drawer__sidebar-item-icon"
                >
                  <svg
                    class="t-icon t-icon-app"
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单三
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <span
                  class="t-drawer__sidebar-item-icon"
                >
                  <svg
                    class="t-icon t-icon-app"
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单四
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <span
                  class="t-drawer__sidebar-item-icon"
                >
                  <svg
                    class="t-icon t-icon-app"
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单五
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <span
                  class="t-drawer__sidebar-item-icon"
                >
                  <svg
                    class="t-icon t-icon-app"
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M2 2h9v9H2V2zm2 2v5h5V4H4zm13.5 0a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM13 6.5a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM2 13h9v9H2v-9zm2 2v5h5v-5H4zm9-2h9v9h-9v-9zm2 2v5h5v-5h-5z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单六
                </div>
              </div>
              
            </div>
            <!---->
          </div>
          
        </div>
      </teleport-stub>
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-6846568d=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          带图标抽屉
          
        </span>
        <!---->
      </button>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-4e345f36=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        带标题抽屉
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--left"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-drawer"
          >
            <div
              class="t-drawer__title"
            >
              标题
            </div>
            <!---->
            <div
              class="t-drawer__sidebar"
            >
              
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单一
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单二
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单三
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单四
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单五
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单六
                </div>
              </div>
              
            </div>
            <!---->
          </div>
          
        </div>
      </teleport-stub>
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          带标题抽屉
          
        </span>
        <!---->
      </button>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
    data-v-4e345f36=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带底部插槽样式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      
      <teleport-stub
        disabled="false"
        to="[object HTMLBodyElement]"
      >
        <div
          class="t-overlay"
          style="z-index: 1000; transition-duration: 300ms; display: none;"
        >
          <!---->
        </div>
        <div
          class="t-popup t-popup--left"
          style="display: none;"
        >
          <!--v-if-->
          
          <div
            class="t-drawer"
          >
            <!---->
            <!---->
            <div
              class="t-drawer__sidebar"
            >
              
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单一
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单二
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单三
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单四
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单五
                </div>
              </div>
              <div
                class="t-drawer__sidebar-item"
              >
                <!---->
                <div
                  class="t-drawer__sidebar-item-title"
                >
                  菜单六
                </div>
              </div>
              
            </div>
            <div
              class="t-drawer__footer"
            >
              
              <div
                class="button-host"
              >
                <button
                  aria-disabled="false"
                  class="t-button t-button--size-large t-button--outline t-button--default t-button--rectangle t-button--block"
                  role="button"
                  type="button"
                >
                  <!---->
                  <span
                    class="t-button__content"
                  >
                    
                    操作
                    
                  </span>
                  <!---->
                </button>
              </div>
              
            </div>
          </div>
          
        </div>
      </teleport-stub>
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          带底部插槽抽屉
          
        </span>
        <!---->
      </button>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-4e345f36=""
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 使用方式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        使用命令行
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot with-padding"
    >
      
      <button
        aria-disabled="false"
        class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
        data-v-4e345f36=""
        role="button"
        type="button"
      >
        <!---->
        <span
          class="t-button__content"
        >
          
          命令行调用
          
        </span>
        <!---->
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Drawer > Drawer pluginVue demo works fine 1`] = `
<button
  aria-disabled="false"
  class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
  role="button"
  type="button"
>
  <!---->
  <span
    class="t-button__content"
  >
    
    命令行调用
    
  </span>
  <!---->
</button>
`;

exports[`Drawer > Drawer titleVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <teleport-stub
    disabled="false"
    to="[object HTMLBodyElement]"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      <!---->
    </div>
    <div
      class="t-popup t-popup--left"
      style="display: none;"
    >
      <!--v-if-->
      
      <div
        class="t-drawer"
      >
        <div
          class="t-drawer__title"
        >
          标题
        </div>
        <!---->
        <div
          class="t-drawer__sidebar"
        >
          
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单一
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单二
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单三
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单四
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单五
            </div>
          </div>
          <div
            class="t-drawer__sidebar-item"
          >
            <!---->
            <div
              class="t-drawer__sidebar-item-title"
            >
              菜单六
            </div>
          </div>
          
        </div>
        <!---->
      </div>
      
    </div>
  </teleport-stub>
  <button
    aria-disabled="false"
    class="t-button t-button--size-large t-button--outline t-button--primary t-button--rectangle t-button--block"
    role="button"
    type="button"
  >
    <!---->
    <span
      class="t-button__content"
    >
      
      带标题抽屉
      
    </span>
    <!---->
  </button>
  
</div>
`;
